# codex-memory-board

./: .gitignore  AGENTS.md  Documentation.md  Implement.md  Plan.md  Prompt.md  README.md  pyproject.toml
docs/: ARCHITECTURE_DIAGRAMS.md  Codex-Memory-Board-User-Manual-ZH.docx  PROJECT_GUIDE.md  README.md
src/codex_memory_board/: __init__.py  __main__.py  cli.py  console.py  documentation_board.py  handoff.py  handoff_board.py  init_memory.py  models.py  next_board.py  next_step.py  parser.py  paths.py  store.py  templates.py  validate.py  validate_board.py
tests/: test_cli.py  test_documentation_board.py  test_handoff.py  test_next_step.py  test_smoke.py  test_validate.py
tools/: build_user_manual_docx.py
